進行類別檔案分離

--- a/ERNS/ERNS/ERNS.vcxproj.filters
+++ b/ERNS/ERNS/ERNS.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="Resource.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
+    <ClInclude Include="CEditControlSMS.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="CToolTipListCtrl.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ERNS.cpp">
@@ -39,6 +45,12 @@
       <Filter>來源檔案</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+    <ClCompile Include="CEditControlSMS.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+    <ClCompile Include="CToolTipListCtrl.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
   </ItemGroup>
